--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -154,6 +154,10 @@ jobs:
 
       - uses: docker/setup-buildx-action@v3
 
+      - name: Convert repository name to lowercase
+        id: repo_name
+        run: echo "lowercase=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -165,7 +169,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ needs.setup.outputs.repository-lowercase }}
+          images: ghcr.io/${{ steps.repo_name.outputs.lowercase }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
