--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -130,7 +130,7 @@ jobs:
           cache: 'gradle'
 
       - name: Build Dokka HTML docs
-        run: ./gradlew dokkaHtml
+        run: ./gradlew dokkaGenerateHtml
 
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4
